Issue #3065169 by agami4: Remove z-index from main revert changes photoswipe.js

--- a/themes/socialbase/assets/css/navbar.css
+++ b/themes/socialbase/assets/css/navbar.css
@@ -104,10 +104,6 @@
   left: auto;
 }
 
-body.is-pswp--open .navbar-fixed-top {
-  position: relative;
-}
-
 .navbar-brand {
   display: inline-block;
   vertical-align: top;
